@@ -1,6 +1,7 @@
 Revision history for exact::class
 
 {{$NEXT}}
+        - Pre-support for exact v1.15 try implementation switch
 
 1.11      2021-01-13 11:13:36-08:00 America/Los_Angeles
         - Override some minimum version reqs in dist.ini
